--- a/_config.yml
+++ b/_config.yml
@@ -16,10 +16,10 @@ minimal_mistakes_skin    : "contrast" # "air", "aqua", "contrast", "dark", "dirt
 
 # Site Settings
 locale                   : "ko-KR"
-title                    : "청구리 스튜디오"
+title                    : "CHUNGURI STUDIO"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
-name                     : "청구리 스튜디오"
+name                     : "CHUNGURI STUDIO"
 description              : "청구리의 우당탕탕 작업 공간"
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
